--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>CBT Gesture PNG Loop</title>
+<title>CBT Gesture Safe Loop</title>
 
 <style>
 html,body{
@@ -31,7 +31,7 @@ video{
   width:100%;
   height:100%;
   object-fit:cover;
-  animation: zoomin 7.5s linear infinite;
+  animation:zoomin 7.5s linear infinite;
 }
 
 @keyframes zoomin{
@@ -40,7 +40,7 @@ video{
   100%{transform:scale(1.025);}
 }
 
-/* SAFE AREA (REAL PHONE SCREEN) */
+/* SAFE PHONE AREA */
 .safe{
   position:absolute;
   top:8%;
@@ -52,7 +52,7 @@ video{
   pointer-events:none;
 }
 
-/* HAND PNG */
+/* HAND CONTAINER */
 .hand{
   position:absolute;
   width:96px;
@@ -60,42 +60,28 @@ video{
   left:62%;
   top:46%;
   opacity:0;
-  animation: handmove 7.5s infinite;
+  animation:handmove 7.5s infinite;
+  text-align:center;
+  font-size:56px;
 }
 
+/* HAND IMAGE */
 .hand img{
   width:100%;
   height:auto;
   display:block;
-  filter: drop-shadow(0 8px 22px rgba(0,0,0,.45));
-  transform-origin: 20% 20%;
+  filter:drop-shadow(0 8px 22px rgba(0,0,0,.45));
+  transform-origin:20% 20%;
 }
 
 /* GESTURE ANIMATION */
 @keyframes handmove{
-  0%{
-    opacity:0;
-    transform:translate(0,24px) scale(.92);
-  }
-  12%{
-    opacity:1;
-    transform:translate(0,0) scale(1);
-  }
-  35%{
-    opacity:1;
-    transform:translate(-36px,-18px) scale(1);
-  }
-  55%{
-    opacity:1;
-    transform:translate(-36px,-18px) scale(1);
-  }
-  70%{
-    opacity:0;
-    transform:translate(-36px,-18px) scale(.96);
-  }
-  100%{
-    opacity:0;
-  }
+  0%{opacity:0; transform:translate(0,24px) scale(.92);}
+  12%{opacity:1; transform:translate(0,0) scale(1);}
+  35%{opacity:1; transform:translate(-36px,-18px) scale(1);}
+  55%{opacity:1; transform:translate(-36px,-18px) scale(1);}
+  70%{opacity:0; transform:translate(-36px,-18px) scale(.96);}
+  100%{opacity:0;}
 }
 </style>
 </head>
@@ -109,7 +95,7 @@ video{
   <!-- SAFE PHONE AREA -->
   <div class="safe">
     <div class="hand">
-      <img src="hand.png" alt="gesture hand">
+      <img src="hand.png" alt="gesture hand" onerror="this.style.display='none'; this.parentNode.innerHTML='☝️';">
     </div>
   </div>
 
