--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>CBT Gesture Safe Loop</title>
+<title>CBT Gesture Multi-Target</title>
 
 <style>
 html,body{
@@ -57,8 +57,6 @@ video{
   position:absolute;
   width:96px;
   height:auto;
-  left:62%;
-  top:46%;
   opacity:0;
   animation:handmove 7.5s infinite;
   text-align:center;
@@ -74,13 +72,13 @@ video{
   transform-origin:20% 20%;
 }
 
-/* GESTURE ANIMATION */
+/* MULTI-TARGET GESTURE */
 @keyframes handmove{
   0%{opacity:0; transform:translate(0,24px) scale(.92);}
-  12%{opacity:1; transform:translate(0,0) scale(1);}
-  35%{opacity:1; transform:translate(-36px,-18px) scale(1);}
-  55%{opacity:1; transform:translate(-36px,-18px) scale(1);}
-  70%{opacity:0; transform:translate(-36px,-18px) scale(.96);}
+  10%{opacity:1; transform:translate(0,0) scale(1);}       /* target 1 */
+  30%{transform:translate(-24px,-12px) scale(1);}           /* target 2 */
+  55%{transform:translate(-48px,24px) scale(1);}            /* target 3 */
+  70%{opacity:0; transform:translate(-48px,24px) scale(.96);}
   100%{opacity:0;}
 }
 </style>
