--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>CBT Gesture Ultimate Loop</title>
+<title>CBT Gesture Next-Level</title>
 
 <style>
 html,body{
@@ -58,7 +58,6 @@ video{
   width:96px;
   height:auto;
   opacity:0;
-  animation:handmove 7.5s infinite;
   text-align:center;
   font-size:56px;
 }
@@ -70,39 +69,40 @@ video{
   display:block;
   filter:drop-shadow(0 8px 22px rgba(0,0,0,.45));
   transform-origin:20% 20%;
+  transition: transform 0.25s ease-out;
 }
 
-/* MULTI-TARGET + TAP ANIMATION */
+/* ANIMASI ROTASI + TAP DYNAMIC */
 @keyframes handmove{
   0%{
     opacity:0;
-    transform:translate(0,24px) scale(.92);
+    transform:translate(0,24px) rotate(0deg) scale(.92);
   }
   10%{
     opacity:1;
-    transform:translate(0,0) scale(1);
-  }             /* target 1 - soal */
+    transform:translate(0,0) rotate(-15deg) scale(1);
+  }
   25%{
-    transform:translate(-24px,-12px) scale(.92);
+    transform:translate(-24px,-12px) rotate(10deg) scale(.92);
   }
   30%{
-    transform:translate(-24px,-12px) scale(.95);
-  }             /* tap small */
+    transform:translate(-24px,-12px) rotate(10deg) scale(.95);
+  }
   32%{
-    transform:translate(-24px,-12px) scale(1);
-  }             /* release */
+    transform:translate(-24px,-12px) rotate(10deg) scale(1);
+  }
   50%{
-    transform:translate(-48px,24px) scale(.92);
+    transform:translate(-48px,24px) rotate(-5deg) scale(.92);
   }
   55%{
-    transform:translate(-48px,24px) scale(.95);
-  }             /* tap small */
+    transform:translate(-48px,24px) rotate(-5deg) scale(.95);
+  }
   57%{
-    transform:translate(-48px,24px) scale(1);
-  }             /* release */
+    transform:translate(-48px,24px) rotate(-5deg) scale(1);
+  }
   70%{
     opacity:0;
-    transform:translate(-48px,24px) scale(.96);
+    transform:translate(-48px,24px) rotate(0deg) scale(.96);
   }
   100%{
     opacity:0;
@@ -125,5 +125,36 @@ video{
   </div>
 
 </div>
+
+<script>
+// OPTIONAL: follow cursor / scroll simulation
+// Ini membuat tangan bergerak halus mengikuti alur tertentu
+const hand = document.querySelector('.hand img');
+
+// definisikan target X,Y relatif ke safe container
+const targets = [
+  {x:0, y:0, rotate:-15, scale:1},   // target 1
+  {x:-24, y:-12, rotate:10, scale:1},// target 2
+  {x:-48, y:24, rotate:-5, scale:1}  // target 3
+];
+
+let t=0;
+const duration = 7500; // 7.5 detik
+function animateHand(timestamp){
+  const time = performance.now() % duration;
+  // tentukan fase berdasarkan waktu
+  let phase = 0;
+  if(time < duration*0.3) phase=0;
+  else if(time < duration*0.55) phase=1;
+  else phase=2;
+
+  const target = targets[phase];
+  hand.style.transform = `translate(${target.x}px, ${target.y}px) rotate(${target.rotate}deg) scale(${target.scale})`;
+
+  requestAnimationFrame(animateHand);
+}
+requestAnimationFrame(animateHand);
+</script>
+
 </body>
 </html>
