--- a/index.html
+++ b/index.html
@@ -3,121 +3,35 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>CBT Gesture Realistic Demo</title>
-
-<style>
-html, body {
-  margin:0;
-  padding:0;
-  width:100%;
-  height:100%;
-  background:#000;
-  overflow:hidden;
-  font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-}
-
-.stage {
-  position:relative;
-  width:100vw;
-  height:100vh;
-  overflow:hidden;
-  background:#000;
-}
-
-/* VIDEO DEMO CBT */
-video {
-  position:absolute;
-  inset:0;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  z-index:1;
-  animation:zoomin 7.5s linear infinite;
-}
-
-@keyframes zoomin {
-  0% {transform:scale(1);}
-  25% {transform:scale(1.025);}
-  100% {transform:scale(1.025);}
-}
-
-/* SAFE AREA HP */
-.safe {
-  position:absolute;
-  top:8%;
-  bottom:8%;
-  left:50%;
-  transform:translateX(-50%);
-  width:86%;
-  max-width:420px;
-  pointer-events:none;
-  z-index:5;
-}
-
-/* HAND CONTAINER */
-.hand {
-  position:absolute;
-  width:96px;
-  height:auto;
-  opacity:0;
-  text-align:center;
-  z-index:10;
-}
-
-.hand img {
-  width:100%;
-  height:auto;
-  display:block;
-  background:transparent;
-  filter: drop-shadow(0 8px 16px rgba(0,0,0,0.5));
-  transform-origin:20% 20%;
-  transition: transform 0.2s ease-out, opacity 0.2s ease-out;
-}
-</style>
+<title>Video Debug CBT</title>
 </head>
+<body style="margin:0; background:#000; display:flex; justify-content:center; align-items:center; height:100vh;">
 
-<body>
-<div class="stage">
+<h1 style="color:#fff; position:absolute; top:10px; text-align:center; width:100%;">Video Debug CBT</h1>
 
-  <!-- VIDEO DEMO CBT -->
-  <video id="demoVideo" src="video.mp4" autoplay muted loop playsinline></video>
-
-  <!-- SAFE PHONE AREA -->
-  <div class="safe">
-    <div class="hand" id="hand">
-      <img src="hand.png" alt="gesture hand">
-    </div>
-  </div>
-
-</div>
+<!-- VIDEO DEMO -->
+<video id="demoVideo" 
+       src="video.mp4" 
+       autoplay 
+       muted 
+       loop 
+       playsinline 
+       controls
+       style="max-width:100%; max-height:100%; border:2px solid #fff;">
+</video>
 
 <script>
 const video = document.getElementById('demoVideo');
-const hand = document.getElementById('hand');
 
-// Timeline gesture (detik)
-const timeline = [
-  {start:0, end:1.5, x:0, y:24, rotate:0, scale:0.92, opacity:0},
-  {start:1.5, end:2.5, x:0, y:0, rotate:-10, scale:1, opacity:1},
-  {start:2.5, end:4, x:20, y:50, rotate:15, scale:0.92, opacity:1},
-  {start:4, end:4.3, x:20, y:50, rotate:15, scale:0.95, opacity:1},
-  {start:4.3, end:4.5, x:20, y:50, rotate:15, scale:1, opacity:1},
-  {start:4.5, end:6, x:-10, y:80, rotate:-5, scale:0.92, opacity:1},
-  {start:6, end:6.3, x:-10, y:80, rotate:-5, scale:0.95, opacity:1},
-  {start:6.3, end:6.5, x:-10, y:80, rotate:-5, scale:1, opacity:1},
-  {start:6.5, end:7.5, x:-10, y:80, rotate:-5, scale:0.96, opacity:0},
-];
+video.addEventListener('error', (e) => {
+  console.error('Video gagal dimuat:', e);
+  alert('Video tidak muncul. Cek path atau format video!');
+});
 
-video.addEventListener('timeupdate', () => {
-  const t = video.currentTime % video.duration; // loop
-  let state = timeline.find(s => t >= s.start && t < s.end);
-  if(state){
-    hand.style.opacity = state.opacity;
-    hand.style.transform = `translate(${state.x}px, ${state.y}px) rotate(${state.rotate}deg) scale(${state.scale})`;
-  } else {
-    hand.style.opacity = 0;
-  }
+video.addEventListener('loadeddata', () => {
+  console.log('Video berhasil dimuat dan siap diputar!');
 });
 </script>
+
 </body>
 </html>
