--- a/index.html
+++ b/index.html
@@ -1,37 +1,138 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1"/>
-<title>Video Debug CBT</title>
+<meta charset="UTF-8">
+<title>CBTLearning – Framework Belajar SNBT</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{
+  margin:0;
+  background:#020617;
+  height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-family:system-ui,sans-serif;
+}
+
+.phone{
+  width:360px;
+  height:740px;
+  border-radius:40px;
+  padding:14px;
+  background:#000;
+  box-shadow:0 30px 80px rgba(0,0,0,.7);
+}
+
+.screen{
+  position:relative;
+  width:100%;
+  height:100%;
+  border-radius:26px;
+  overflow:hidden;
+  background:#020617;
+}
+
+/* TITLE */
+.title{
+  position:absolute;
+  top:26px;
+  left:24px;
+  right:24px;
+  color:#fff;
+  animation:fadeUp .6s ease-out forwards;
+}
+
+.title h1{
+  margin:0;
+  font-size:26px;
+  font-weight:800;
+  line-height:1.2;
+}
+
+.title p{
+  margin-top:6px;
+  color:#cbd5f5;
+  font-size:14px;
+}
+
+/* FRAMEWORK */
+.framework{
+  position:absolute;
+  top:120px;
+  left:24px;
+  right:24px;
+  display:grid;
+  gap:16px;
+}
+
+.item{
+  background:#020617;
+  border:1px solid #1e293b;
+  border-radius:16px;
+  padding:14px;
+  color:#fff;
+  animation:fadeUp .6s ease-out forwards;
+}
+
+.item span{
+  font-size:13px;
+  color:#94a3b8;
+}
+
+.item strong{
+  display:block;
+  margin-top:4px;
+  font-size:16px;
+}
+
+.footer{
+  position:absolute;
+  bottom:26px;
+  left:24px;
+  right:24px;
+  text-align:center;
+  color:#94a3b8;
+  font-size:13px;
+}
+
+@keyframes fadeUp{
+  from{opacity:0; transform:translateY(6px)}
+  to{opacity:1; transform:translateY(0)}
+}
+</style>
 </head>
-<body style="margin:0; background:#000; display:flex; justify-content:center; align-items:center; height:100vh;">
 
-<h1 style="color:#fff; position:absolute; top:10px; text-align:center; width:100%;">Video Debug CBT</h1>
+<body>
+<div class="phone">
+  <div class="screen">
 
-<!-- VIDEO DEMO -->
-<video id="demoVideo" 
-       src="video.mp4" 
-       autoplay 
-       muted 
-       loop 
-       playsinline 
-       controls
-       style="max-width:100%; max-height:100%; border:2px solid #fff;">
-</video>
+    <div class="title">
+      <h1>Belajar SNBT<br>bukan nambah materi</h1>
+      <p>Tapi mengubah cara berpikir</p>
+    </div>
 
-<script>
-const video = document.getElementById('demoVideo');
+    <div class="framework">
+      <div class="item">
+        <span>01</span>
+        <strong>Pahami tujuan soal</strong>
+      </div>
+      <div class="item">
+        <span>02</span>
+        <strong>Gunakan logika eliminasi</strong>
+      </div>
+      <div class="item">
+        <span>03</span>
+        <strong>Biasakan jelaskan jawaban</strong>
+      </div>
+    </div>
 
-video.addEventListener('error', (e) => {
-  console.error('Video gagal dimuat:', e);
-  alert('Video tidak muncul. Cek path atau format video!');
-});
+    <div class="footer">
+      Pendekatan belajar CBTLearning
+    </div>
 
-video.addEventListener('loadeddata', () => {
-  console.log('Video berhasil dimuat dan siap diputar!');
-});
-</script>
-
+  </div>
+</div>
 </body>
 </html>
