--- a/index.html
+++ b/index.html
@@ -1,138 +1,179 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<title>CBTLearning – Framework Belajar SNBT</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Level 3.1 – Salah Baca Soal</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: "Segoe UI", sans-serif;
+      background: #111;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      color: #eee;
+    }
 
-<style>
-body{
-  margin:0;
-  background:#020617;
-  height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-family:system-ui,sans-serif;
-}
+    .phone-frame {
+      width: 360px;
+      height: 640px;
+      background: #222;
+      border-radius: 40px;
+      overflow: hidden;
+      position: relative;
+      box-shadow: 0 0 30px rgba(0,0,0,0.7);
+    }
 
-.phone{
-  width:360px;
-  height:740px;
-  border-radius:40px;
-  padding:14px;
-  background:#000;
-  box-shadow:0 30px 80px rgba(0,0,0,.7);
-}
+    .screen {
+      width: 100%;
+      height: 100%;
+      position: relative;
+      padding: 20px;
+      box-sizing: border-box;
+    }
 
-.screen{
-  position:relative;
-  width:100%;
-  height:100%;
-  border-radius:26px;
-  overflow:hidden;
-  background:#020617;
-}
+    .soal {
+      font-size: 16px;
+      line-height: 1.5;
+      background: #333;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      transition: transform 0.5s ease, background 0.5s ease;
+    }
 
-/* TITLE */
-.title{
-  position:absolute;
-  top:26px;
-  left:24px;
-  right:24px;
-  color:#fff;
-  animation:fadeUp .6s ease-out forwards;
-}
+    .highlight {
+      background: #444;
+      transition: background 0.3s ease;
+    }
 
-.title h1{
-  margin:0;
-  font-size:26px;
-  font-weight:800;
-  line-height:1.2;
-}
+    .jawaban {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      margin-top: 10px;
+    }
 
-.title p{
-  margin-top:6px;
-  color:#cbd5f5;
-  font-size:14px;
-}
+    .jawaban div {
+      background: #555;
+      padding: 10px;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
 
-/* FRAMEWORK */
-.framework{
-  position:absolute;
-  top:120px;
-  left:24px;
-  right:24px;
-  display:grid;
-  gap:16px;
-}
+    .jawaban div.correct {
+      background: #2ecc71;
+      color: #fff;
+    }
 
-.item{
-  background:#020617;
-  border:1px solid #1e293b;
-  border-radius:16px;
-  padding:14px;
-  color:#fff;
-  animation:fadeUp .6s ease-out forwards;
-}
+    .text-overlay {
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      font-size: 14px;
+      line-height: 1.4;
+      max-width: 320px;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+    }
 
-.item span{
-  font-size:13px;
-  color:#94a3b8;
-}
+    .fade-in {
+      opacity: 1 !important;
+    }
 
-.item strong{
-  display:block;
-  margin-top:4px;
-  font-size:16px;
-}
+    .list-small {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      font-size: 10px;
+      color: #aaa;
+      display: flex;
+      flex-direction: column;
+      gap: 2px;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+    }
 
-.footer{
-  position:absolute;
-  bottom:26px;
-  left:24px;
-  right:24px;
-  text-align:center;
-  color:#94a3b8;
-  font-size:13px;
-}
-
-@keyframes fadeUp{
-  from{opacity:0; transform:translateY(6px)}
-  to{opacity:1; transform:translateY(0)}
-}
-</style>
+    .list-small.show {
+      opacity: 1;
+    }
+  </style>
 </head>
-
 <body>
-<div class="phone">
-  <div class="screen">
 
-    <div class="title">
-      <h1>Belajar SNBT<br>bukan nambah materi</h1>
-      <p>Tapi mengubah cara berpikir</p>
-    </div>
-
-    <div class="framework">
-      <div class="item">
-        <span>01</span>
-        <strong>Pahami tujuan soal</strong>
+  <div class="phone-frame">
+    <div class="screen">
+      <div class="soal" id="soal">
+        Soal ini sering dianggap mudah.
+        <br><br>
+        Sebuah benda harganya Rp50.000. Harga naik 20%. Berapa harga baru?
       </div>
-      <div class="item">
-        <span>02</span>
-        <strong>Gunakan logika eliminasi</strong>
+
+      <div class="jawaban" id="jawaban">
+        <div>A: Rp55.000</div>
+        <div>B: Rp58.000</div>
+        <div>C: Rp60.000</div>
+        <div>D: Rp62.000</div>
       </div>
-      <div class="item">
-        <span>03</span>
-        <strong>Biasakan jelaskan jawaban</strong>
+
+      <div class="text-overlay" id="overlay1">Langsung jawab. Tanpa membaca struktur.</div>
+      <div class="text-overlay" id="overlay2">Soal selalu meminta ini dulu.</div>
+      <div class="text-overlay" id="overlay3">Bukan lebih pintar. Lebih teratur.</div>
+      <div class="text-overlay" id="overlay4">Yang dilatih bukan soal. Tapi urutan berpikir.</div>
+
+      <div class="list-small" id="list-small">
+        <div>Konsep</div>
+        <div>Domain</div>
+        <div>Opsi</div>
+        <div>Eliminasi</div>
+        <div>Validasi</div>
+        <div>Logika</div>
+        <div>Konfirmasi</div>
       </div>
     </div>
-
-    <div class="footer">
-      Pendekatan belajar CBTLearning
-    </div>
-
   </div>
-</div>
+
+  <script>
+    const overlay1 = document.getElementById('overlay1');
+    const overlay2 = document.getElementById('overlay2');
+    const overlay3 = document.getElementById('overlay3');
+    const overlay4 = document.getElementById('overlay4');
+    const soal = document.getElementById('soal');
+    const jawabanDivs = document.querySelectorAll('#jawaban div');
+    const listSmall = document.getElementById('list-small');
+
+    // Timeline (detik)
+    setTimeout(() => {
+      overlay1.classList.add('fade-in'); // 1.3–4.0
+    }, 1300);
+
+    setTimeout(() => {
+      overlay1.classList.remove('fade-in');
+      overlay2.classList.add('fade-in'); // 4.0–7.5
+      soal.style.transform = 'scale(1.05)';
+      jawabanDivs[2].classList.add('highlight'); // highlight jawaban C
+    }, 4000);
+
+    setTimeout(() => {
+      overlay2.classList.remove('fade-in');
+      overlay3.classList.add('fade-in'); // 7.5–11.5
+      jawabanDivs.forEach(div => div.classList.remove('highlight'));
+      jawabanDivs[2].classList.add('correct'); // jawaban benar
+    }, 7500);
+
+    setTimeout(() => {
+      overlay3.classList.remove('fade-in');
+      overlay4.classList.add('fade-in'); // 11.5–15.5
+      listSmall.classList.add('show');
+    }, 11500);
+
+    setTimeout(() => {
+      overlay4.classList.remove('fade-in');
+      // STOP, diam 1 detik
+    }, 15500);
+  </script>
 </body>
 </html>
