--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Level 3.1 – Salah Baca Soal</title>
+  <title>Level 3.2 – Salah Pilih Konsep</title>
   <style>
     body {
       margin: 0;
@@ -107,22 +107,22 @@
   <div class="phone-frame">
     <div class="screen">
       <div class="soal" id="soal">
-        Soal ini sering dianggap mudah.
+        Soal ini tampak familiar, tapi bukan fokusnya.
         <br><br>
-        Sebuah benda harganya Rp50.000. Harga naik 20%. Berapa harga baru?
+        Seorang pegawai bekerja 8 jam sehari. Hitung produktivitas jika target naik 25%.
       </div>
 
       <div class="jawaban" id="jawaban">
-        <div>A: Rp55.000</div>
-        <div>B: Rp58.000</div>
-        <div>C: Rp60.000</div>
-        <div>D: Rp62.000</div>
+        <div>A: Fokus hitung jam kerja</div>
+        <div>B: Fokus target output</div>
+        <div>C: Fokus kompensasi</div>
+        <div>D: Fokus metode</div>
       </div>
 
-      <div class="text-overlay" id="overlay1">Langsung jawab. Tanpa membaca struktur.</div>
-      <div class="text-overlay" id="overlay2">Soal selalu meminta ini dulu.</div>
-      <div class="text-overlay" id="overlay3">Bukan lebih pintar. Lebih teratur.</div>
-      <div class="text-overlay" id="overlay4">Yang dilatih bukan soal. Tapi urutan berpikir.</div>
+      <div class="text-overlay" id="overlay1">Langsung pilih konsep tanpa cek domain.</div>
+      <div class="text-overlay" id="overlay2">Soal selalu meminta konsep yang tepat dulu.</div>
+      <div class="text-overlay" id="overlay3">Bukan lebih pintar. Lebih tepat pilih konsep.</div>
+      <div class="text-overlay" id="overlay4">Yang dilatih bukan soal. Tapi pemilihan konsep yang tepat.</div>
 
       <div class="list-small" id="list-small">
         <div>Konsep</div>
@@ -147,33 +147,35 @@
 
     // Timeline (detik)
     setTimeout(() => {
-      overlay1.classList.add('fade-in'); // 1.3–4.0
-    }, 1300);
+      overlay1.classList.add('fade-in'); // 1.5–5.0
+      jawabanDivs[0].classList.add('highlight'); // highlight pilihan awal keliru
+    }, 1500);
 
     setTimeout(() => {
       overlay1.classList.remove('fade-in');
-      overlay2.classList.add('fade-in'); // 4.0–7.5
-      soal.style.transform = 'scale(1.05)';
-      jawabanDivs[2].classList.add('highlight'); // highlight jawaban C
-    }, 4000);
+      overlay2.classList.add('fade-in'); // 5.0–9.0
+      soal.style.transform = 'scale(1.05)'; // zoom ringan
+      jawabanDivs.forEach(div => div.classList.remove('highlight'));
+      jawabanDivs[1].classList.add('highlight'); // highlight konsep benar
+    }, 5000);
 
     setTimeout(() => {
       overlay2.classList.remove('fade-in');
-      overlay3.classList.add('fade-in'); // 7.5–11.5
+      overlay3.classList.add('fade-in'); // 9.0–13.0
       jawabanDivs.forEach(div => div.classList.remove('highlight'));
-      jawabanDivs[2].classList.add('correct'); // jawaban benar
-    }, 7500);
+      jawabanDivs[1].classList.add('correct'); // jawaban benar
+    }, 9000);
 
     setTimeout(() => {
       overlay3.classList.remove('fade-in');
-      overlay4.classList.add('fade-in'); // 11.5–15.5
+      overlay4.classList.add('fade-in'); // 13.0–16.0
       listSmall.classList.add('show');
-    }, 11500);
+    }, 13000);
 
     setTimeout(() => {
       overlay4.classList.remove('fade-in');
       // STOP, diam 1 detik
-    }, 15500);
+    }, 16000);
   </script>
 </body>
 </html>
