--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Level 3.3 – Terjebak Opsi Tampak Benar</title>
+  <title>Level 3.4 – Rationale 7 Langkah (Dipotong)</title>
   <style>
     body {
       margin: 0;
@@ -49,26 +49,6 @@
       transition: background 0.3s ease;
     }
 
-    .jawaban {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-      margin-top: 10px;
-    }
-
-    .jawaban div {
-      background: #555;
-      padding: 10px;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    .jawaban div.correct {
-      background: #2ecc71;
-      color: #fff;
-    }
-
     .text-overlay {
       position: absolute;
       bottom: 20px;
@@ -104,78 +84,57 @@
 </head>
 <body>
 
-  <div class="phone-frame">
-    <div class="screen">
-      <div class="soal" id="soal">
-        Soal ini terlihat gampang… tapi hati-hati.
-        <br><br>
-        Jika sebuah mobil menempuh 60 km/jam selama 2 jam, jarak tempuh berapa km?
-      </div>
+<div class="phone-frame">
+  <div class="screen">
+    <div class="soal" id="soal">
+      Mari lihat Rationale singkatnya.
+      <br><br>
+      Seorang pegawai harus menyelesaikan target 100 unit/hari. Bagaimana cara menilai produktivitasnya?
+    </div>
 
-      <div class="jawaban" id="jawaban">
-        <div>A: 60 km</div>
-        <div>B: 120 km</div>
-        <div>C: 180 km</div>
-        <div>D: 240 km</div>
-      </div>
+    <div class="text-overlay" id="overlay1">Langkah 1: Identifikasi konsep</div>
+    <div class="text-overlay" id="overlay2">Langkah 2: Tentukan domain</div>
+    <div class="text-overlay" id="overlay3">Langkah 3: Periksa opsi</div>
+    <div class="text-overlay" id="overlay4">Langkah 4: Eliminasi</div>
+    <div class="text-overlay" id="overlay5">Langkah 5: Validasi</div>
+    <div class="text-overlay" id="overlay6">Langkah 6–7: Logika & Konfirmasi</div>
+    <div class="text-overlay" id="overlay7">Rationale singkat ini membentuk urutan berpikir yang benar.</div>
 
-      <div class="text-overlay" id="overlay1">Terjebak jawaban yang tampak benar.</div>
-      <div class="text-overlay" id="overlay2">Cek tiap opsi. Mana benar-benar sesuai soal?</div>
-      <div class="text-overlay" id="overlay3">Bukan lebih pintar. Lebih teliti memilih opsi.</div>
-      <div class="text-overlay" id="overlay4">Yang dilatih bukan soal. Tapi kemampuan eliminasi & logika.</div>
-
-      <div class="list-small" id="list-small">
-        <div>Konsep</div>
-        <div>Domain</div>
-        <div>Opsi</div>
-        <div>Eliminasi</div>
-        <div>Validasi</div>
-        <div>Logika</div>
-        <div>Konfirmasi</div>
-      </div>
+    <div class="list-small" id="list-small">
+      <div>Konsep</div>
+      <div>Domain</div>
+      <div>Opsi</div>
+      <div>Eliminasi</div>
+      <div>Validasi</div>
+      <div>Logika</div>
+      <div>Konfirmasi</div>
     </div>
   </div>
+</div>
 
-  <script>
-    const overlay1 = document.getElementById('overlay1');
-    const overlay2 = document.getElementById('overlay2');
-    const overlay3 = document.getElementById('overlay3');
-    const overlay4 = document.getElementById('overlay4');
-    const soal = document.getElementById('soal');
-    const jawabanDivs = document.querySelectorAll('#jawaban div');
-    const listSmall = document.getElementById('list-small');
+<script>
+  const overlays = [
+    document.getElementById('overlay1'),
+    document.getElementById('overlay2'),
+    document.getElementById('overlay3'),
+    document.getElementById('overlay4'),
+    document.getElementById('overlay5'),
+    document.getElementById('overlay6'),
+    document.getElementById('overlay7'),
+  ];
+  const soal = document.getElementById('soal');
+  const listSmall = document.getElementById('list-small');
 
-    // Timeline (detik)
-    setTimeout(() => {
-      overlay1.classList.add('fade-in'); // 1.5–5.0
-      jawabanDivs[2].classList.add('highlight'); // distractor tampak benar
-    }, 1500);
+  // Timeline dalam milidetik
+  setTimeout(() => overlays[0].classList.add('fade-in'), 1500);   // langkah 1
+  setTimeout(() => { overlays[0].classList.remove('fade-in'); overlays[1].classList.add('fade-in'); soal.style.transform='scale(1.05)'; }, 3000);
+  setTimeout(() => { overlays[1].classList.remove('fade-in'); overlays[2].classList.add('fade-in'); }, 4500);
+  setTimeout(() => { overlays[2].classList.remove('fade-in'); overlays[3].classList.add('fade-in'); }, 6000);
+  setTimeout(() => { overlays[3].classList.remove('fade-in'); overlays[4].classList.add('fade-in'); }, 7500);
+  setTimeout(() => { overlays[4].classList.remove('fade-in'); overlays[5].classList.add('fade-in'); }, 9000);
+  setTimeout(() => { overlays[5].classList.remove('fade-in'); overlays[6].classList.add('fade-in'); listSmall.classList.add('show'); }, 12000);
+  setTimeout(() => overlays[6].classList.remove('fade-in'), 18000); // diam terakhir
+</script>
 
-    setTimeout(() => {
-      overlay1.classList.remove('fade-in');
-      overlay2.classList.add('fade-in'); // 5.0–9.0
-      soal.style.transform = 'scale(1.05)'; // zoom ringan
-      jawabanDivs.forEach(div => div.classList.remove('highlight'));
-      jawabanDivs[1].classList.add('highlight'); // jawaban benar
-    }, 5000);
-
-    setTimeout(() => {
-      overlay2.classList.remove('fade-in');
-      overlay3.classList.add('fade-in'); // 9.0–13.0
-      jawabanDivs.forEach(div => div.classList.remove('highlight'));
-      jawabanDivs[1].classList.add('correct'); // jawaban benar
-    }, 9000);
-
-    setTimeout(() => {
-      overlay3.classList.remove('fade-in');
-      overlay4.classList.add('fade-in'); // 13.0–16.0
-      listSmall.classList.add('show');
-    }, 13000);
-
-    setTimeout(() => {
-      overlay4.classList.remove('fade-in');
-      // STOP, diam 1 detik
-    }, 16000);
-  </script>
 </body>
 </html>
